# hms-timeline

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  dev-config.yaml  repository.yaml
.github/workflows/: build-timeline.yml
frontend/: README.md  angular.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  tailwind.config.js
frontend/e2e/: ha-recording-debug.spec.ts  recording-playback.spec.ts  search.spec.ts  snapshot-display.spec.ts  timeline.spec.ts
frontend/src/: index.html  ingress-interceptor.js  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/models/: camera.model.ts  event.model.ts
frontend/src/app/core/services/: api.service.ts  camera.service.ts  events.service.ts  stream.service.ts
frontend/src/app/core/utils/: media-url.ts
frontend/src/app/features/camera-view/: camera-view.component.html  camera-view.component.scss  camera-view.component.ts
frontend/src/app/features/camera-view/components/camera-tabs/: camera-tabs.component.ts
frontend/src/app/features/camera-view/components/date-picker/: date-picker.component.ts
frontend/src/app/features/camera-view/components/event-card/: event-card.component.ts
frontend/src/app/features/camera-view/components/event-list/: event-list.component.ts
frontend/src/app/features/camera-view/components/live-player/: live-player.component.ts
frontend/src/app/features/camera-view/components/search-bar/: search-bar.component.ts
frontend/src/app/features/camera-view/components/timeline/: timeline.component.ts
frontend/src/app/features/camera-view/components/video-player/: video-player.component.ts
frontend/src/app/shared/components/error-message/: error-message.component.ts
frontend/src/app/shared/components/loading-spinner/: loading-spinner.component.ts
frontend/src/app/shared/directives/: lazy-load.directive.ts
frontend/src/app/shared/pipes/: duration.pipe.ts  time-ago.pipe.ts
frontend/src/environments/: environment.prod.ts  environment.ts
ha-addon/: Dockerfile  build.yaml  config.yaml  run.sh
ha-addon/static/: index.html  main-S5PBJTUM.js  styles-RVHXI6GW.css
yolo-timeline/: Dockerfile  config.yaml  run.sh
yolo_detection_cpp/: CMakeLists.txt  CMakePresets.json  vcpkg.json  version.h.in
yolo_detection_cpp/.github/workflows/: build-detection.yml  build-timeline.yml
yolo_detection_cpp/docker/: docker-compose.yml
yolo_detection_cpp/docker/timeline/: Dockerfile
yolo_detection_cpp/services/timeline/: CMakeLists.txt
yolo_detection_cpp/services/timeline/include/: cors_filter.h  embedding_client.h  http_utils.h
yolo_detection_cpp/services/timeline/include/controllers/: media_controller.h  ui_api_controller.h
yolo_detection_cpp/services/timeline/src/: cors_filter.cpp  embedding_client.cpp  main.cpp
yolo_detection_cpp/services/timeline/src/controllers/: media_controller.cpp  ui_api_controller.cpp
yolo_detection_cpp/services/timeline/tests/: controllers_test.cpp
yolo_detection_cpp/shared/: CMakeLists.txt
yolo_detection_cpp/shared/common/include/: time_utils.h
yolo_detection_cpp/shared/common/src/: time_utils.cpp
yolo_detection_cpp/shared/common/tests/: time_utils_test.cpp
yolo_detection_cpp/shared/config/include/: config_manager.h
yolo_detection_cpp/shared/config/src/: config_manager.cpp
yolo_detection_cpp/shared/config/tests/: config_manager_test.cpp
yolo_detection_cpp/shared/db/include/: api_queries.h  db_pool.h
yolo_detection_cpp/shared/db/src/: api_queries.cpp  db_pool.cpp
yolo_detection_cpp/shared/db/tests/: api_queries_test.cpp
